--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Admin
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Us: "aboutme"
   Rekomendasi:
     - Bikin Toko Online: "https://orderio.id"
     - Undangan Nikah Digital: "https://maumantenan.com"
