--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,12 @@ title: Media Baru
 author: Admin
 
 ###############################################
+# --- Tambahan 31 Januari 2023 --- #
+###############################################
+
+url: "https://mediabaru.orderio.id"
+
+###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
