--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,12 @@ author: Admin
 url: "https://mediabaru.orderio.id"
 
 ###############################################
+# --- Mau nyalain space iklan --- #
+###############################################
+
+ads: true
+
+###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
