--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,7 @@ disqus: "mediabaru"
 ################
 
 # Ruby Date Format to show dates of posts
-date_format: "%B %-d, %Y"
+date_format: "%-d %B %Y"
 
 # Facebook App ID
 #fb_app_id: ""
