--- a/_config.yml
+++ b/_config.yml
@@ -140,8 +140,7 @@ keywords: "berita baru hari ini, info terbaru hari ini, info hari ini, berita vi
 navbar-col: "#FFFFFF"
 # ini versi asli: navbar-col: "#EAEAEA"
 navbar-text-col: "#404040"
-navbar-border-col: "#FFFFFF"
-# navbar-border-col: "#DDDDDD"
+navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
