--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,8 @@ navbar-text-col: "#404040"
 navbar-border-col: "#FFFFFF"
 # navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
-text-col: "#404040"
+text-col: "#333333"
+# text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#FFFFFF"
