--- a/_config.yml
+++ b/_config.yml
@@ -148,8 +148,7 @@ text-col: "#333333"
 # text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#FFFFFF"
-# footer-col: "#EAEAEA"
+footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#333333"
 # footer-link-col: "#404040"
